Updating project version to 4.0.0

--- a/AdjustBindingsiOS/AdjustBindingsiOS.csproj
+++ b/AdjustBindingsiOS/AdjustBindingsiOS.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>AdjustBindingsiOS</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>AdjustBindingsiOS</AssemblyName>
+    <ReleaseVersion>4.0.0</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
