--- a/AdjustDemoiOS/Info.plist
+++ b/AdjustDemoiOS/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>AdjustDemoiOS</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.adjust</string>
+	<string>com.adjust.example</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
@@ -34,5 +34,16 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Resources/Images.xcassets/AppIcons.appiconset</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.adjust.example</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>adjustExample</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
