--- a/AdjustDemoAndroid/Properties/AndroidManifest.xml
+++ b/AdjustDemoAndroid/Properties/AndroidManifest.xml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="AdjustDemoAndroid.AdjustDemoAndroid">
-    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="22" />
-    <application android:label="AdjustDemoAndroid" android:icon="@drawable/icon">
-    </application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.adjust.AdjustDemo">
+	<uses-sdk android:minSdkVersion="14" android:targetSdkVersion="22" />
+	<application android:icon="@drawable/icon" android:label="AdjustDemo">
+	</application>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 </manifest>
