Link shared code from demo projects

--- a/AdjustDemoiOS/AdjustDemoiOS.csproj
+++ b/AdjustDemoiOS/AdjustDemoiOS.csproj
@@ -103,6 +103,7 @@
       <DependentUpon>ViewController.cs</DependentUpon>
     </Compile>
   </ItemGroup>
+  <Import Project="..\AdjustDemoSharedCode\AdjustDemoSharedCode.projitems" Label="Shared" Condition="Exists('..\AdjustDemoSharedCode\AdjustDemoSharedCode.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\AdjustBindingsiOS\AdjustBindingsiOS.csproj">
