--- a/AdjustDemoAndroid/AdjustDemoAndroid.csproj
+++ b/AdjustDemoAndroid/AdjustDemoAndroid.csproj
@@ -80,6 +80,7 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\Icon.png" />
   </ItemGroup>
+  <Import Project="..\AdjustDemoSharedCode\AdjustDemoSharedCode.projitems" Label="Shared" Condition="Exists('..\AdjustDemoSharedCode\AdjustDemoSharedCode.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\AdjustBindingsAndroid\AdjustBindingsAndroid.csproj">
