--- a/AdjustDemoiOS/AdjustDemoiOS.csproj
+++ b/AdjustDemoiOS/AdjustDemoiOS.csproj
@@ -110,5 +110,9 @@
       <Project>{EF829C6D-7D00-4DF1-95C7-F3E54B164827}</Project>
       <Name>AdjustBindingsiOS</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AdjustDemoPortableLibrary\AdjustDemoPortableLibrary.csproj">
+      <Project>{AE75556B-B944-4BF1-8E5F-96C7417C3CBD}</Project>
+      <Name>AdjustDemoPortableLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
