--- a/AdjustDemoiOS/AdjustDemoiOS.csproj
+++ b/AdjustDemoiOS/AdjustDemoiOS.csproj
@@ -114,5 +114,9 @@
       <Project>{AE75556B-B944-4BF1-8E5F-96C7417C3CBD}</Project>
       <Name>AdjustDemoPortableLibrary</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AdjustDemoFormsLibrary\AdjustDemoFormsLibrary.csproj">
+      <Project>{106DC2C1-66A4-4BE1-AA50-B71EAEE53804}</Project>
+      <Name>AdjustDemoFormsLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
