--- a/AdjustDemoWindowsUniversal_8_1/AdjustDemoWindowsUniversal_8_1.WindowsPhone/AdjustDemoWindowsUniversal_8_1.WindowsPhone.csproj
+++ b/AdjustDemoWindowsUniversal_8_1/AdjustDemoWindowsUniversal_8_1.WindowsPhone/AdjustDemoWindowsUniversal_8_1.WindowsPhone.csproj
@@ -192,6 +192,7 @@
     <TargetPlatformIdentifier>WindowsPhoneApp</TargetPlatformIdentifier>
   </PropertyGroup>
   <Import Project="..\AdjustDemoWindowsUniversal_8_1.Shared\AdjustDemoWindowsUniversal_8_1.Shared.projitems" Label="Shared" />
+  <Import Project="..\..\AdjustDemoSharedCode\AdjustDemoSharedCode.projitems" Label="SharedXamarin" Condition="Exists('..\..\AdjustDemoSharedCode\AdjustDemoSharedCode.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <Import Project="..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
