New version 4.8.0 and native iOS library update

--- a/iOS/ext/Makefile
+++ b/iOS/ext/Makefile
@@ -1,5 +1,5 @@
 SRCDIR = ./sdk
-LIBOUTDIR = ../Adjust.Xamarin.iOS/Resources
+LIBOUTDIR = ../AdjustSdk.Xamarin.iOS/Resources
 STATICFRAMEWORK = $(SRCDIR)/Frameworks/Static/AdjustSdk.framework
 
 default: copy
