Android bindings and example app

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "iOS/ext/sdk"]
 	path = iOS/ext/sdk
 	url = git@github.com:adjust/ios_sdk.git
+[submodule "Android/ext/sdk"]
+	path = Android/ext/sdk
+	url = git@github.com:adjust/android_sdk.git
