--- a/iOS/Example/Info.plist
+++ b/iOS/Example/Info.plist
@@ -35,5 +35,16 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.adjust.example</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>adjustExample</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
