--- a/Android/AdjustSdk.Xamarin.Android/AdjustSdk.Xamarin.Android.csproj
+++ b/Android/AdjustSdk.Xamarin.Android/AdjustSdk.Xamarin.Android.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{5A410FCF-04C7-4F1B-ACD8-F87A2E205528}</ProjectGuid>
     <ProjectTypeGuids>{10368E6C-D01B-4462-8E8B-01FC667A7035};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
-    <RootNamespace>AdjustSdk.Xamarin.Android</RootNamespace>
+    <RootNamespace>AdjustBindingsiOS</RootNamespace>
     <AssemblyName>AdjustSdk.Xamarin.Android</AssemblyName>
     <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
