--- a/iOS/Example/Entitlements.plist
+++ b/iOS/Example/Entitlements.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:z9pm.adj.st</string>
+		<string>applinks:f6wc.adj.st</string>
 	</array>
 </dict>
 </plist>
