--- a/iOS/Example/Info.plist
+++ b/iOS/Example/Info.plist
@@ -5,15 +5,13 @@
 	<key>CFBundleName</key>
 	<string>Example</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.adjust.example</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>com.adjust.examples</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MinimumOSVersion</key>
-	<string>6.0</string>
+	<string>8.0</string>
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
@@ -46,5 +44,7 @@
 			</array>
 		</dict>
 	</array>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
 </dict>
 </plist>
