--- a/iOS/Example/Example.csproj
+++ b/iOS/Example/Example.csproj
@@ -92,6 +92,9 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="AdjustSdk.Xamarin.iOS">
+      <HintPath>..\AdjustSdk.Xamarin.iOS\bin\Debug\AdjustSdk.Xamarin.iOS.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json" />
@@ -115,12 +118,6 @@
     <Compile Include="ViewController.designer.cs">
       <DependentUpon>ViewController.cs</DependentUpon>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AdjustSdk.Xamarin.iOS\AdjustSdk.Xamarin.iOS.csproj">
-      <Project>{6736B825-A5A2-4F17-B08A-B6D2A6BDD08F}</Project>
-      <Name>AdjustSdk.Xamarin.iOS</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
