--- a/Android/Example/Properties/AndroidManifest.xml
+++ b/Android/Example/Properties/AndroidManifest.xml
@@ -3,5 +3,7 @@
 	<uses-sdk android:minSdkVersion="14" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<application android:allowBackup="true" android:label="@string/app_name"></application>
 </manifest>
