Update Android project
Also update adjust-android.jar and add the new installreferrer.aar

--- a/Android/AdjustSdk.Xamarin.Android/AdjustSdk.Xamarin.Android.csproj
+++ b/Android/AdjustSdk.Xamarin.Android/AdjustSdk.Xamarin.Android.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>AdjustBindingsiOS</RootNamespace>
     <AssemblyName>AdjustSdk.Xamarin.Android</AssemblyName>
-    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <AndroidUseLatestPlatformSdk>true</AndroidUseLatestPlatformSdk>
@@ -53,6 +53,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedJar Include="Jars\adjust-android.jar" />
+  </ItemGroup>
+  <ItemGroup>
+    <LibraryProjectZip Include="Jars\installreferrer-1.0.aar" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
 </Project>
