test lib - needed GSON dependency added

--- a/Android/Test/TestLib/TestLib.csproj
+++ b/Android/Test/TestLib/TestLib.csproj
@@ -57,5 +57,8 @@
   <ItemGroup>
     <EmbeddedJar Include="Jars\adjust-testing.jar" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedReferenceJar Include="Jars\gson-2.8.1.jar" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
 </Project>
