--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,16 @@
-[submodule "iOS/ext/sdk"]
-	path = ios/ext/sdk
+[submodule "ext/ios/sdk"]
+	path = ext/ios/sdk
         url = git@github.com:adjust/ios_sdk.git
         branch = master
-[submodule "Android/ext/sdk"]
-	path = android/ext/sdk
+[submodule "ext/android/sdk"]
+	path = ext/android/sdk
 	url = git@github.com:adjust/android_sdk.git
+        branch = master
+[submodule "ext/ios/sdk-dev"]
+        path = ext/ios/sdk-dev
+        url = git@github.com:adjust/ios_sdk_dev.git
+        branch = master
+[submodule "ext/android/sdk-dev"]
+        path = ext/android/sdk-dev
+        url = git@github.com:adjust/android_sdk_dev.git
         branch = master
