--- a/ios/Test/TestLib/TestLib.csproj
+++ b/ios/Test/TestLib/TestLib.csproj
@@ -34,8 +34,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\AdjustTestLibrary.linkwith.cs">
-      <DependentUpon>AdjustTestLibrary.a</DependentUpon>
+    <Compile Include="Resources\libAdjustTest.linkwith.cs">
+      <DependentUpon>libAdjustTest.a</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -48,7 +48,7 @@
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
-    <ObjcBindingNativeLibrary Include="Resources\AdjustTestLibrary.a" />
+    <ObjcBindingNativeLibrary Include="Resources\libAdjustTest.a" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
