--- a/android/AdjustSdk.Xamarin.Android/AdjustSdk.Xamarin.Android.csproj
+++ b/android/AdjustSdk.Xamarin.Android/AdjustSdk.Xamarin.Android.csproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.props" Condition="Exists('..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -8,10 +9,22 @@
     <OutputType>Library</OutputType>
     <RootNamespace>AdjustBindingsiOS</RootNamespace>
     <AssemblyName>AdjustSdk.Xamarin.Android</AssemblyName>
-    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v8.1</TargetFrameworkVersion>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <AndroidUseLatestPlatformSdk>true</AndroidUseLatestPlatformSdk>
+    <PackageId>AdjustSdk.Xamarin.Android</PackageId>
+    <PackageVersion>4.14.0</PackageVersion>
+    <Authors>Adjust GmbH</Authors>
+    <Description>This is the Xamarin Android SDK of Adjust. http://www.adjust.com</Description>
+    <PackOnBuild>true</PackOnBuild>
+    <PackageIconUrl>https://raw.github.com/adjust/adjust_sdk/master/Resources/windows/gravatar.gif</PackageIconUrl>
+    <Owners>Adjust GmbH</Owners>
+    <Summary>This is the Xamarin Android SDK of Adjust. http://www.adjust.com</Summary>
+    <Title>Xamarin Android SDK of Adjust</Title>
+    <PackageLicenseUrl>https://github.com/adjust/xamarin_sdk/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/adjust/xamarin_sdk</PackageProjectUrl>
+    <PackageTags>adjust android xamarin</PackageTags>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,6 +58,7 @@
   <ItemGroup>
     <None Include="Additions\AboutAdditions.txt" />
     <None Include="Jars\AboutJars.txt" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <TransformFile Include="Transforms\EnumFields.xml" />
@@ -58,4 +72,5 @@
     <LibraryProjectZip Include="Jars\installreferrer-1.0.aar" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
+  <Import Project="..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.targets" Condition="Exists('..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.targets')" />
 </Project>
