--- a/android/Test/TestLib/TestLib.csproj
+++ b/android/Test/TestLib/TestLib.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedReferenceJar Include="Jars\gson-2.8.1.jar" />
+    <EmbeddedReferenceJar Include="Jars\Java-WebSocket-1.3.9.jar" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedJar Include="Jars\adjust-test.jar" />
