replaced installreferrer-1.0.aar with Xamarin.Android.Binding.InstallReferrer 2.2.0

--- a/android/AdjustSdk.Xamarin.Android/AdjustSdk.Xamarin.Android.csproj
+++ b/android/AdjustSdk.Xamarin.Android/AdjustSdk.Xamarin.Android.csproj
@@ -13,7 +13,7 @@
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <PackageId>AdjustSdk.Xamarin.Android</PackageId>
-    <PackageVersion>4.23.0</PackageVersion>
+    <PackageVersion>4.23.2</PackageVersion>
     <Authors>Adjust GmbH</Authors>
     <Description>This is the Xamarin Android SDK of Adjust. http://www.adjust.com</Description>
     <PackOnBuild>true</PackOnBuild>
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Mono.Android" />
+    <Reference Include="Xamarin.Android.Binding.InstallReferrer">
+      <HintPath>..\packages\Xamarin.Android.Binding.InstallReferrer.2.2.0\lib\MonoAndroid10\Xamarin.Android.Binding.InstallReferrer.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -63,9 +66,6 @@
     <TransformFile Include="Transforms\EnumFields.xml" />
     <TransformFile Include="Transforms\EnumMethods.xml" />
     <TransformFile Include="Transforms\Metadata.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <LibraryProjectZip Include="Jars\installreferrer-1.0.aar" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedJar Include="Jars\adjust-android.jar" />
