--- a/ios/Test/TestApp/TestApp.csproj
+++ b/ios/Test/TestApp/TestApp.csproj
@@ -78,6 +78,7 @@
     <MtouchArch>ARM64</MtouchArch>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
     <MtouchVerbosity></MtouchVerbosity>
+    <MtouchExtraArgs>-gcc_flags "-ObjC -framework AppTrackingTransparency -framework AdServices"</MtouchExtraArgs>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
